Fixed form dto confusion